# hexi

./: .gitignore  Cargo.toml  README.md  archio.lua  be  be.c  be.h  binmatch.c  binsequence.c  binsequence.h  binsequence.py  drw.lua  extractor.py  go.mod  hex.lua  input.lua  main.c  main.go  ou  readme.html  run.sh  signatures.txt  terminal.lua  test.txt  util.lua
benches/: my_bench.rs
binjuice/: binjuice.py
binsequence/: binsequence.py  extractor.py  scratch.py
bitshred/: bitshred.py  bloomfilter.py
cport/: be.c  be.h
io/: io.go
src/: lib.rs  main.rs
test/: makefile  test.c
test/.source/: loop.c  target.c
test/pickle/: blocks
test/source/: similar.c  target.c
thesis/: abstracts.tex  conclusions.tex  cover.tex  hex.tex  implementation.tex  intro.tex  mybib.bib  notes.tex  output.aux  output.bbl  output.blg  output.lof  output.lot  output.pyg  output.tex  output.toc  stateofart.aux  stateofart.tex  stateofart.tex.bak
thesis/presentation/: PRESENTATION
ui/: index.html
ui/elm-stuff/0.19.1/: UI.elmi  UI.elmo
ui/src/: UI.elm
