[package]
name = "hexi"
version = "0.1.0"
authors = ["vik <vazkats@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = "0.23.0"
object = "0.22.0"
memmap = "0.7.0"
termion = "1.5"
tui = "0.13"
failure = "0.1.8"
rand = "0.7.3"
